Finalized modeling & viz analysis notebooks

--- a/Model_3_Complex_LSTM.ipynb
+++ b/Model_3_Complex_LSTM.ipynb
@@ -29,22 +29,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introducing LSTM-Based Music Generation Model\n",
-        "The model is tailored to understand and replicate the complexities of musical compositions.\n",
+        "## Enhanced LSTM Model for Music Generation\n",
+        "Building upon the foundations of recurrent neural networks, this model leverages the power of bidirectional LSTMs and regularization techniques to create a more robust and capable system for music generation tasks.\n",
         "\n",
-        "- This model will be compiled with sparse categorical crossentropy as the loss function, which is appropriate for this multi-class classification problem.\n",
-        "\n",
-        "- Adam optimizer will be used for efficient training.\n"
+        "## Enhanced Sampling for Generation\n",
+        "Implementing Temperature Sampling will allow control of the randomness of predictions. A higher temperature results in more random outputs, and a lower temperature makes the model's outputs more deterministic.\n"
       ],
       "metadata": {
-        "id": "miUeGeiJAw5x"
+        "id": "7QyVpT5v-rGu"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Data Preparation\n",
-        "Adjusting note representation to include note duration and time offsets."
+        "### Data Preparation"
       ],
       "metadata": {
         "id": "s7OiSdrmRt4D"
@@ -91,7 +89,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Encoding each unique note to an integer"
+        "### Encoding each unique note to an integer."
       ],
       "metadata": {
         "id": "kFSRzbE2WuO_"
@@ -101,15 +99,60 @@
       "cell_type": "code",
       "source": [
         "# Flatten\n",
-        "all_notes = [note for sequence in notes_array for note in sequence]\n",
+        "all_notes = [note for sequence in notes_array for note in sequence]"
+      ],
+      "metadata": {
+        "id": "9Lh5q_CQN4p-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from fractions import Fraction\n",
         "\n",
-        "# Mapping from notes to integers\n",
-        "note_to_int = {note: i for i, note in enumerate(sorted(set(all_notes)))}\n",
-        "\n",
-        "# Encode sequences\n",
+        "all_notes = [(pitch, float(duration) if isinstance(duration, Fraction) else duration,\n",
+        "              float(offset) if isinstance(offset, Fraction) else offset)\n",
+        "             for pitch, duration, offset in all_notes]\n"
+      ],
+      "metadata": {
+        "id": "c_i1YG2BOOmn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "notes_array = [[(pitch, float(duration) if isinstance(duration, Fraction) else duration,\n",
+        "                 float(offset) if isinstance(offset, Fraction) else offset)\n",
+        "                for pitch, duration, offset in sequence]\n",
+        "               for sequence in notes_array]\n"
+      ],
+      "metadata": {
+        "id": "YLBsO1HBORKn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "note_to_int = {note: i for i, note in enumerate(sorted(set(all_notes)))}\n"
+      ],
+      "metadata": {
+        "id": "3n7HKWl1OT10"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "input_sequences = []\n",
         "output_notes = []\n",
-        "no_of_timesteps = 32\n",
+        "no_of_timesteps = 100\n",
         "\n",
         "for notes in notes_array:\n",
         "    for i in range(len(notes) - no_of_timesteps):\n",
@@ -122,7 +165,7 @@
         "y_seq = np.array(output_notes)\n"
       ],
       "metadata": {
-        "id": "z3yOeDPRbIxy"
+        "id": "30rW9Qf7OWIv"
       },
       "execution_count": null,
       "outputs": []
@@ -154,8 +197,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### LSTM Model Architecture\n",
-        "Trying a LSTM-based architecture for better sequence generation."
+        "### Adjusting LSTM Model Complexity"
       ],
       "metadata": {
         "id": "OohVKtacSrIN"
@@ -165,18 +207,38 @@
       "cell_type": "code",
       "source": [
         "from keras.models import Sequential\n",
-        "from keras.layers import LSTM, Dense, Dropout\n",
+        "from keras.layers import LSTM, Dense, Dropout, Bidirectional\n",
+        "from keras.regularizers import l2\n",
+        "from keras.optimizers import Adam\n",
+        "\n",
+        "# Model Configuration\n",
+        "no_of_timesteps = 100\n",
+        "num_notes = len(note_to_int)\n",
         "\n",
         "model = Sequential()\n",
-        "model.add(LSTM(256, input_shape=(no_of_timesteps, 1), return_sequences=True))\n",
-        "model.add(LSTM(256))\n",
-        "model.add(Dense(256, activation='relu'))\n",
+        "\n",
+        "# First Bidirectional LSTM Layer\n",
+        "model.add(Bidirectional(LSTM(256, return_sequences=True, kernel_regularizer=l2(0.001)), input_shape=(no_of_timesteps, 1)))\n",
+        "\n",
+        "# Second LSTM Layer\n",
+        "model.add(LSTM(128, return_sequences=True, kernel_regularizer=l2(0.001)))\n",
+        "\n",
+        "# Third Bidirectional LSTM Layer\n",
+        "model.add(Bidirectional(LSTM(64, kernel_regularizer=l2(0.001))))\n",
+        "\n",
+        "# Dense Layer with Regularization\n",
+        "model.add(Dense(128, activation='relu', kernel_regularizer=l2(0.001)))\n",
         "model.add(Dropout(0.3))\n",
-        "model.add(Dense(len(note_to_int), activation='softmax'))\n",
         "\n",
-        "model.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+        "# Output Layer\n",
+        "model.add(Dense(num_notes, activation='softmax'))\n",
         "\n",
-        "model.summary()"
+        "# Optimizer Configuration\n",
+        "optimizer = Adam(learning_rate=0.001)\n",
+        "\n",
+        "model.compile(loss='sparse_categorical_crossentropy', optimizer=optimizer, metrics=['accuracy'])\n",
+        "\n",
+        "model.summary()\n"
       ],
       "metadata": {
         "id": "qa49DYYvmYQe"
@@ -190,7 +252,7 @@
         "### Model Checkpoint"
       ],
       "metadata": {
-        "id": "lffS56B88E7V"
+        "id": "sQ75RPLZ_Mih"
       }
     },
     {
@@ -198,7 +260,7 @@
       "source": [
         "from keras.callbacks import ModelCheckpoint\n",
         "\n",
-        "mc = ModelCheckpoint('best_model_lstm1.h5', monitor='val_loss', mode='min', save_best_only=True, verbose=1)"
+        "mc = ModelCheckpoint('best_model_lstm2.h5', monitor='val_loss', mode='min', save_best_only=True, verbose=1)"
       ],
       "metadata": {
         "id": "sBjqEA7WmYOU"
@@ -212,13 +274,13 @@
         "### Train Model"
       ],
       "metadata": {
-        "id": "gFMZPsfo8CIC"
+        "id": "LFg8TNpb_O0i"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "history = model.fit(x_tr, y_tr, epochs=50, batch_size=128, validation_data=(x_val, y_val), callbacks=[mc])"
+        "history = model.fit(x_tr, y_tr, epochs=50, batch_size=64, validation_data=(x_val, y_val), callbacks=[mc])"
       ],
       "metadata": {
         "id": "wRl6w_DFmYMi"
@@ -232,14 +294,14 @@
         "### Load Best Model"
       ],
       "metadata": {
-        "id": "ZW8Qn8-T7vKQ"
+        "id": "8SqKZxRr_SoQ"
       }
     },
     {
       "cell_type": "code",
       "source": [
         "from keras.models import load_model\n",
-        "model = load_model('best_model_lstm1.h5')"
+        "model = load_model('best_model_lstm2.h5')"
       ],
       "metadata": {
         "id": "ltnjLjqfmYIo"
@@ -250,35 +312,61 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Generate Music Predictions"
+        "### Temperature Sampling"
       ],
       "metadata": {
-        "id": "c1mdFZUX7zC6"
+        "id": "h58WC1Uw8gj4"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "def generate_music(model, start_sequence, length=50):\n",
+        "def sample_with_temperature(probabilities, temperature=.96):\n",
+        "    if temperature <= 0:\n",
+        "        return np.argmax(probabilities)\n",
+        "    else:\n",
+        "        probabilities = np.asarray(probabilities).astype('float64')\n",
+        "        probabilities = np.log(probabilities + 1e-7) / temperature\n",
+        "        exp_probs = np.exp(probabilities)\n",
+        "        probabilities = exp_probs / np.sum(exp_probs)\n",
+        "        return np.random.choice(range(len(probabilities)), p=probabilities)\n"
+      ],
+      "metadata": {
+        "id": "9zS5Kuz68YdB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def generate_music(model, start_sequence, length=50, temperature=.96, lookback_length=100):\n",
         "    prediction_output = []\n",
         "\n",
-        "    # Ensure start_sequence is correctly formatted\n",
+        "    # Ensuring start_sequence is of length lookback_length\n",
+        "    if len(start_sequence) > lookback_length:\n",
+        "        start_sequence = start_sequence[-lookback_length:]\n",
+        "    elif len(start_sequence) < lookback_length:\n",
+        "        # Pad the sequence\n",
+        "        start_sequence = [('rest', 0, 0)] * (lookback_length - len(start_sequence)) + start_sequence\n",
+        "\n",
         "    start_sequence_formatted = np.array([note_to_int[note] for note in start_sequence])\n",
         "\n",
         "    for note_index in range(length):\n",
-        "        prediction_input = np.reshape(start_sequence_formatted, (1, len(start_sequence_formatted), 1))\n",
+        "        prediction_input = np.reshape(start_sequence_formatted, (1, lookback_length, 1))\n",
         "        prob = model.predict(prediction_input)[0]\n",
-        "        index = np.random.choice(range(len(prob)), p=prob)\n",
-        "        predicted_note = x_int_to_note[index]  # Use the inverse mapping\n",
+        "        index = sample_with_temperature(prob, temperature)\n",
+        "        predicted_note = x_int_to_note[index]\n",
         "        prediction_output.append(predicted_note)\n",
         "\n",
         "        # Update start_sequence_formatted for the next prediction\n",
-        "        start_sequence_formatted = np.append(start_sequence_formatted, [index])[1:]\n",
+        "        start_sequence_formatted = np.append(start_sequence_formatted, [index])[-lookback_length:]\n",
         "\n",
         "    return prediction_output\n",
         "\n",
+        "\n",
         "# Create the inverse mapping from integers back to note tuples\n",
-        "x_int_to_note = dict((number, note) for note, number in note_to_int.items())"
+        "x_int_to_note = dict((number, note) for note, number in note_to_int.items())\n"
       ],
       "metadata": {
         "id": "wF87tLOZmYGg"
@@ -289,49 +377,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Convert Back to MIDI"
+        "### Convert to MIDI & Generate Music"
       ],
       "metadata": {
-        "id": "NqQCCHlE75Va"
+        "id": "wg1xVteHJL4q"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "from music21 import stream, instrument, note, chord, midi\n",
+        "from music21 import pitch\n",
         "\n",
         "def midi_number_to_note_name(midi_number):\n",
-        "    # Converts a MIDI note number to a note name\n",
-        "    return midi.translate.pitchToNoteName(midi_number)\n",
-        "\n",
-        "def convert_to_midi(prediction_output):\n",
-        "    midi_stream = stream.Stream()\n",
-        "    midi_stream.append(instrument.Violin())\n",
-        "\n",
-        "    offset = 0\n",
-        "    for note_info in prediction_output:\n",
-        "        note_name = note_info[0]\n",
-        "\n",
-        "        # Convert MIDI note numbers to note names\n",
-        "        if note_name.isdigit():\n",
-        "            note_name = midi_number_to_note_name(int(note_name))\n",
-        "\n",
-        "        # Create note or rest\n",
-        "        if note_name != 'rest':\n",
-        "            new_note = note.Note(note_name)\n",
-        "        else:\n",
-        "            new_note = note.Rest()\n",
-        "\n",
-        "        new_note.duration.quarterLength = note_info[1]\n",
-        "        new_note.offset = offset\n",
-        "        new_note.storedInstrument = instrument.Violin()\n",
-        "        midi_stream.append(new_note)\n",
-        "        offset += note_info[2]\n",
-        "\n",
-        "    midi_stream.write('midi', fp='lstm_music1.mid')"
+        "    return pitch.Pitch(midi=midi_number).nameWithOctave\n"
       ],
       "metadata": {
-        "id": "8JzJHhffgz5G"
+        "id": "MqB3wXP-QQ5z"
       },
       "execution_count": null,
       "outputs": []
@@ -339,7 +400,36 @@
     {
       "cell_type": "code",
       "source": [
-        "from music21 import pitch\n",
+        "from music21 import stream, instrument, note, chord\n",
+        "\n",
+        "def convert_to_midi(prediction_output):\n",
+        "    midi_stream = stream.Stream()\n",
+        "    midi_stream.append(instrument.Violin())\n",
+        "\n",
+        "    offset = 0\n",
+        "    for i, note_info in enumerate(prediction_output):\n",
+        "        try:\n",
+        "            note_name = note_info[0]\n",
+        "            # Check if note_name is a MIDI number and convert it\n",
+        "            if note_name.isdigit():\n",
+        "                note_name = midi_number_to_note_name(int(note_name))\n",
+        "\n",
+        "            # Create note or rest\n",
+        "            if note_name != 'rest':\n",
+        "                new_note = note.Note(note_name)\n",
+        "            else:\n",
+        "                new_note = note.Rest()\n",
+        "\n",
+        "            new_note.duration.quarterLength = note_info[1]\n",
+        "            new_note.offset = offset\n",
+        "            new_note.storedInstrument = instrument.Violin()\n",
+        "            midi_stream.append(new_note)\n",
+        "            offset += new_note.duration.quarterLength\n",
+        "\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error processing note at position {i}: {note_info}. Error: {e}\")\n",
+        "\n",
+        "    midi_stream.write('midi', fp='lstm_music2.mid')\n",
         "\n",
         "# Randomly select a starting sequence from x_val\n",
         "random_index = np.random.randint(0, len(x_val))\n",
@@ -350,10 +440,10 @@
         "\n",
         "# Generate music based on the starting sequence\n",
         "prediction_output = generate_music(model, start_sequence_decoded)\n",
-        "convert_to_midi(prediction_output)\n"
+        "convert_to_midi(prediction_output)"
       ],
       "metadata": {
-        "id": "p5c3cXUF_eiO"
+        "id": "yUEJ-01RQW0M"
       },
       "execution_count": null,
       "outputs": []
@@ -393,7 +483,7 @@
         "fs = FluidSynth('/content/gdrive/MyDrive/Violin_Comp_Data/soundfonts/Acro_Violins.sf2')\n",
         "\n",
         "# Convert MIDI to WAV\n",
-        "fs.midi_to_audio('lstm_music1.mid', 'lstm1_acro.wav')"
+        "fs.midi_to_audio('lstm_music2.mid', 'lstm2_acro.wav')"
       ]
     },
     {
@@ -413,8 +503,7 @@
         "id": "_86mJgzFPGBO"
       },
       "source": [
-        "### Pitch Consistency\n",
-        "Pitch consistency can be evaluated by extracting the pitch from the audio and then analyzing its stability and variance."
+        "### Pitch Consistency"
       ]
     },
     {
@@ -439,9 +528,9 @@
         "    return pitch_variance\n",
         "\n",
         "# Baseline WaveNet\n",
-        "audio, sr = librosa.load('lstm1_acro.wav')\n",
+        "audio, sr = librosa.load('lstm2_acro.wav')\n",
         "pitch_variance = calculate_pitch_consistency(audio, sr)\n",
-        "print(\"First Iteration LSTM Pitch Variance:\", pitch_variance)\n"
+        "print(\"Second Iteration LSTM Pitch Variance:\", pitch_variance)\n"
       ]
     },
     {
@@ -450,10 +539,7 @@
         "id": "IO7oaEcUPM32"
       },
       "source": [
-        "### Rhythm Consistency\n",
-        "Rhythm consistency can be evaluated by analyzing the beat and tempo of the generated audio.\n",
-        "- Extract Beat Information\n",
-        "- Analyze Tempo Stability Over Time"
+        "### Rhythm Consistency"
       ]
     },
     {
@@ -477,7 +563,7 @@
         "\n",
         "    return tempo, tempo_variability\n",
         "\n",
-        "file_paths = ['lstm1_acro.wav']\n",
+        "file_paths = ['lstm2_acro.wav']\n",
         "\n",
         "# Calculate and display rhythm consistency for each file\n",
         "for i, file_path in enumerate(file_paths):\n",
@@ -493,12 +579,18 @@
       "cell_type": "markdown",
       "source": [
         "## Analysis of Pitch and Rhythm Consistency Results\n",
-        "**Pitch Consistency:** The high pitch variance is an area of concern.\n",
+        "**Pitch Consistency:** The pitch variance in the Second Iteration LSTM model is 33,523.45, which is an improvement compared to the first iteration's 42,279.527. This decrease suggests that the model is getting better at maintaining a consistent pitch pattern, leading to potentially more coherent and harmonious music. However, the variance is still relatively high, indicating room for further improvement in capturing and generating stable pitch patterns.\n",
         "\n",
-        "**Rhythm Consistency:** The results here are more promising. The consistency in tempo suggests the model is capturing the rhythmic aspect of the music well.\n",
+        "**Rhythm Consistency:** The tempo increased in variability from the first LSTM model, indicating that the rhythm's timing may fluctuate more in this iteration.\n",
         "\n",
         "## Conclusion\n",
-        "While the rhythm consistency aspect of this model appears solid, the pitch consistency needs improvement. Next, I will increase the complexity of the LSTM model."
+        "The second iteration LSTM model shows a promising improvement in pitch consistency but indicates a need to revisit rhythm stability. Because I suspect issues with the limited training data, I will use a pre-trained model with my input audio for the next iteration. But first, I will perform comparative model analysis to determine the best generated audio to use for the pre-trained model.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "pxTGJ3nFFQ3m"
@@ -507,7 +599,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Proceed to 'Model_3_Complex_LSTM.ipynb'\n",
+        "# Proceed to 'Visual_Analysis_Model_Comparison.ipynb'\n",
+        "\n",
         "``` bash\n",
         "├── AI_Violinist_Intro.ipynb                <- Data capture/project overview\n",
         "├── Model_1_WaveNet.ipynb                   <- Baseline/WaveNet Models\n",
@@ -527,7 +620,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "m2g9WWDEGSUX"
+        "id": "4uEQDUMEMR9o"
       },
       "execution_count": null,
       "outputs": []
