Update images on AI_Violinist_Intro.ipynb

--- a/notebooks/AI_Violinist_Intro.ipynb
+++ b/notebooks/AI_Violinist_Intro.ipynb
@@ -17,7 +17,7 @@
       },
       "source": [
         "<div style=\"text-align: left;\" style=\"border: 2px solid black;\">\n",
-        "    <img src=\"Neural-Net-Violin-Composition/images/AI_Violinist.png\" alt=\"AI_Violinist\" width=\"600\" height=\"500\">\n",
+        "    <img src=\"notebooks/AI_Violinist.png\" alt=\"AI_Violinist\" width=\"600\" height=\"500\">\n",
         "</div>\n",
         "<div align=\"left\">\n",
         "    <font size=\"1\">Image by DALL-E</font>\n",
@@ -91,7 +91,7 @@
       "metadata": {},
       "source": [
         "<div style=\"text-align: center;\">\n",
-        "        <img src=\"images/Computerized_Violin.png\" alt=\"Computerized_Violin\" width=\"700\" height=\"200\">\n",
+        "        <img src=\"notebooks/Computerized_Violin.png\" alt=\"Computerized_Violin\" width=\"700\" height=\"200\">\n",
         "    </div>\n",
         "</div>\n",
         "<div align=\"center\">\n",
